--- a/testing-grounds/index.html
+++ b/testing-grounds/index.html
@@ -364,7 +364,7 @@ setup.SoundPath = setup.Path + "sounds/";</script><tw-passagedata pid="1" name="
 &lt;&lt;set _bgm = setup.SoundPath + &quot;wine.mp3&quot;&gt;&gt;
 &lt;&lt;cacheaudio &quot;wine_bgm&quot; _bgm&gt;&gt;</tw-passagedata><tw-passagedata pid="3" name="Start" tags="start" position="350,100" size="100,100">&lt;span class=&quot;title&quot;&gt;NORMANDIE&lt;/span&gt;
 [[START-&gt;IntroStart]]
-🎧 Headphones are highly recommended.
+🎧 Headphones are highly SUPER recommended.
 
 &lt;&lt;nobr&gt;&gt;
 &lt;&lt;set $src_1 = false&gt;&gt;
